--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
     env_file:
       - ./.env
   web:
-    build: .
+    image: fundania/apiyamdb:latest
     restart: always
     volumes:
       # Контейнер web будет работать с данными, хранящиеся в томе static_value, 
